@@ -17,11 +17,11 @@ from cms.utils.helpers import get_timezone_name
 
 
 def _page_cache_key(request):
-    #md5 key of current path
+    #sha1 key of current path
     cache_key = "%s:%d:%s" % (
         get_cms_setting("CACHE_PREFIX"),
         settings.SITE_ID,
-        hashlib.md5(iri_to_uri(request.get_full_path()).encode('utf-8')).hexdigest()
+        hashlib.sha1(iri_to_uri(request.get_full_path()).encode('utf-8')).hexdigest()
     )
     if settings.USE_TZ:
         cache_key += '.%s' % get_timezone_name()
